--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,12 @@
                                 </div>
                             </div>
 
+                            <div class="col-md-3 wow fadeIn" data-wow-delay=".4s">
+                                <div class="de_count sm-mb30">
+                                    <img src="images/logo/inotech.png" alt="">                                    
+                                </div>
+                            </div>
+
                         </div>
                     </div>
                 </div>
